Use a Java8 compatible method for reading all bytes from a InputStream for the ImageResizer
Signed-off-by: renaud colin <renaud.colin@inra.fr>